- Support deactivation of events, event fee and registrations. - Add css style to anchor tags.

--- a/Registration/src/main/webapp/resources/css/style.css
+++ b/Registration/src/main/webapp/resources/css/style.css
@@ -48,3 +48,18 @@
     right:140px;
     cursor:pointer;
 }
+
+.YLink a:link {
+	color:#336699;
+	text-decoration:none;
+}
+
+.YLink a:hover {
+    color:#336699 !important;
+    text-decoration:underline;
+}
+
+.YLink a:visited {
+	color:#336699;
+	text-decoration:none;
+}
