--- a/Registration/src/main/webapp/resources/css/style.css
+++ b/Registration/src/main/webapp/resources/css/style.css
@@ -50,17 +50,17 @@
 }
 
 .YLink a:link {
-	color:#336699;
+	color:#8F52A0;
 	text-decoration:none;
 }
 
 .YLink a:hover {
-    color:#336699 !important;
+    color:#8F52A0 !important;
     text-decoration:underline;
 }
 
 .YLink a:visited {
-	color:#336699;
+	color:#8F52A0;
 	text-decoration:none;
 }
 
